# Jennifer

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/agents/: analyst.md  coder.md  devops.md  researcher.md  reviewer.md
.claude/commands/: competitor-pulse.md  content-engine.md  dependency-watch.md  eod-wrap.md  exec-assistant.md  inbox-push.md  invoice-chaser.md  lead-followup.md  morning-briefing.md  pr-babysitter.md  review-monitor.md  sales-pipeline.md  traffic-watch.md  uptime-canary.md  weekly-analytics.md
docs/: index.html
src/jennifer/: __init__.py  main.py
src/jennifer/agents/: __init__.py
src/jennifer/config/: brand.yaml  competitors.yaml  email_rules.yaml  endpoints.yaml  prospects.yaml  schedule.yaml
src/jennifer/hooks/: __init__.py
src/jennifer/pipelines/: __init__.py
src/jennifer/tools/: __init__.py  analytics.py  api_client.py  calendar.py  gmail.py  gmail_send.py  google_auth.py  monitoring.py  pipeline.py
tests/: test_agents.py
